<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VideoTracker</string>
    <string name="action_settings">Settings</string>
    <string name="menu_playlist">Playlists</string>
    <string name="menu_preferences">Préférences</string>
    <string name="menu_aide">Besoin d\'aide?</string>
    <string name="menu_a_propos">À propos</string>
    <string name="menu_search">Recherche</string>
    <string name="menu_trier">Tri par</string>
    <string name="menu_share">Partager via</string>
    <string name="menu_add">Ajouter à une playlist</string>
    <string name="description_image_recherche">Icon de recherche, loupe.</string>
    <string name="a_propos_activity_text">Application réalisée dans le cadre d\'un projet universitaire au sein de l\'Université de Montréal.
        \n\nAuteurs du projet :\n\tAnthony Da Mota\n\tHugo Martinez\n\tRomain Piche</string>
    <string name="a_propos_version_text">Version de l\'application : </string>
    <string name="a_propos_version">1.0</string>
    <string name="tri_date">Date de création</string>
    <string name="tri_alpha">Ordre alphabétique</string>
    <string name="tri_nombre">Nombre de vidéos</string>
    <string name="tri_source">Source des vidéos</string>
    <string name="search_query">Ce que vous avez tapé</string>
    <string name="checkbox_youtube">Youtube</string>
    <string name="checkbox_dailymotion">Dailymotion</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="connection_error">Veuillez activer votre connexion Internet</string>
    <string name="pref_video_display_settings">Affichage des vidéos</string>
    <string name="pref_video_youtube_display">Nombre de vidéos Youtube</string>
    <string name="pref_video_display_youtube_summary">Nombre de vidéos de Youtube affichées</string>
    <string name="pref_video_daily_display">Nombre de vidéos Dailymotion</string>
    <string name="pref_video_display_daily_summary">Nombre de vidéos de Dailymotion affichées</string>
</resources>