<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    
    <item
        android:id="@+id/menu_playlist"
        android:icon="@drawable/ic_action_images_slideshow"
        android:showAsAction="always"
        android:title="@string/menu_playlist"/>
    <item
        android:icon="@drawable/ic_action_collections_sort_by_size"
        android:title="@string/menu_trier">
        <menu>
            <item
		        android:id="@+id/tri_source"
		        android:title="@string/tri_source"/>
            <item
		        android:id="@+id/tri_date"
		        android:title="@string/tri_date"/>
            <item
		        android:id="@+id/tri_alpha"
		        android:title="@string/tri_alpha"/>
		</menu>
	</item>	  
    <item
        android:id="@+id/menu_preferences"
        android:showAsAction="never"
        android:title="@string/menu_preferences"/>
    <item
        android:id="@+id/menu_aide"
        android:showAsAction="never"
        android:title="@string/menu_aide"/>
    <item
        android:id="@+id/menu_a_propos"
        android:showAsAction="never"
        android:title="@string/menu_a_propos"/>

</menu>