<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    
    <item
        android:id="@+id/menu_share"
        android:icon="@android:drawable/ic_menu_share"
        android:showAsAction="always"
        android:title="@string/menu_share"/>
    <item
        android:id="@+id/menu_add"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="always"
        android:title="@string/menu_add"/>
    <item
        android:id="@+id/menu_playlist"
        android:icon="@drawable/ic_action_images_slideshow"
        android:showAsAction="always"
        android:title="@string/menu_playlist"/>
    <item
        android:id="@+id/menu_preferences"
        android:showAsAction="never"
        android:title="@string/menu_preferences"/>
    <item
        android:id="@+id/menu_aide"
        android:showAsAction="never"
        android:title="@string/menu_aide"/>
    <item
        android:id="@+id/menu_a_propos"
        android:showAsAction="never"
        android:title="@string/menu_a_propos"/>

</menu>