<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_video_display_settings" >

        <ListPreference
            android:defaultValue="30"
            android:entries="@array/video_display"
            android:entryValues="@array/video_displayValues"
            android:key="yt_display"
            android:summary="@string/pref_video_display_youtube_summary"
            android:title="@string/pref_video_youtube_display" />

        <ListPreference
            android:defaultValue="30"
            android:entries="@array/video_display"
            android:entryValues="@array/video_displayValues"
            android:key="daily_display"
            android:summary="@string/pref_video_display_daily_summary"
            android:title="@string/pref_video_daily_display" />
    </PreferenceCategory>

</PreferenceScreen>