<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/a_propos_activity_text"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/a_propos_version_text"
        android:textSize="12sp" />

	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_propos_version"
        android:textSize="12sp" />
    
    

</LinearLayout>
